// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blog > should get blog entry 1`] = `
Object {
  "content": "试试",
  "createdAt": 1680065731,
  "icon": "https://lain.bgm.tv/pic/photo/g/no_photo.png",
  "id": 319484,
  "noreply": 0,
  "public": true,
  "related": 1,
  "replies": 1,
  "tags": Array [
    "动画",
  ],
  "title": "试试",
  "type": 1,
  "updatedAt": 1680072373,
  "user": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "group": 0,
    "id": 287622,
    "joinedAt": 0,
    "nickname": "nickname 287622",
    "sign": "sing 287622",
    "username": "287622",
  },
  "views": 0,
}
`;

exports[`blog > should get blog photos 1`] = `
Object {
  "data": Array [],
  "total": 0,
}
`;

exports[`blog > should get blog related subjects 1`] = `
Array [
  Object {
    "id": 184017,
    "info": "233话 / 1582-10-14",
    "locked": false,
    "name": "沙盒",
    "nameCN": "Bangumi Wiki 动画测试用沙盘",
    "nsfw": false,
    "rating": Object {
      "count": Array [
        1,
        1,
        0,
        0,
        0,
        1,
        1,
        0,
        0,
        3,
      ],
      "rank": 0,
      "score": 6.57,
      "total": 7,
    },
    "type": 2,
  },
]
`;

exports[`blog > should get private blog entry from friend 1`] = `
Object {
  "content": "感谢 @ klion 提供数据，相关条目数据进行了一次更新。


[img]https://s3.bgm38.com/images/Snipaste_2023-06-05_16-33-39.jpg[/img]

",
  "createdAt": 1680065928,
  "icon": "https://lain.bgm.tv/pic/photo/g/no_photo.png",
  "id": 319486,
  "noreply": 0,
  "public": false,
  "related": 1,
  "replies": 1,
  "tags": Array [
    "动画",
  ],
  "title": "[2023-06-05] 相关条目数据更新",
  "type": 1,
  "updatedAt": 1724513422,
  "user": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "group": 0,
    "id": 287622,
    "joinedAt": 0,
    "nickname": "nickname 287622",
    "sign": "sing 287622",
    "username": "287622",
  },
  "views": 0,
}
`;

exports[`blog > should get private blog entry from self 1`] = `
Object {
  "content": "感谢 @ klion 提供数据，相关条目数据进行了一次更新。


[img]https://s3.bgm38.com/images/Snipaste_2023-06-05_16-33-39.jpg[/img]

",
  "createdAt": 1680065928,
  "icon": "https://lain.bgm.tv/pic/photo/g/no_photo.png",
  "id": 319486,
  "noreply": 0,
  "public": false,
  "related": 1,
  "replies": 1,
  "tags": Array [
    "动画",
  ],
  "title": "[2023-06-05] 相关条目数据更新",
  "type": 1,
  "updatedAt": 1724513422,
  "user": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "group": 0,
    "id": 287622,
    "joinedAt": 0,
    "nickname": "nickname 287622",
    "sign": "sing 287622",
    "username": "287622",
  },
  "views": 0,
}
`;
